# realmail

./: .gitignore  Package.swift  README.md  openspec.md  pyproject.toml  run.sh
openspec/: project.md
openspec/changes/add-app-infrastructure/: proposal.md
openspec/changes/add-auth-service/: proposal.md
openspec/changes/add-imap-service/: proposal.md
openspec/changes/add-main-views/: proposal.md
openspec/changes/add-smtp-service/: proposal.md
openspec/changes/add-swiftdata-models/: proposal.md
openspec/changes/add-unit-testing/: proposal.md  tasks.md
realmail/: __init__.py
realmail/App/: AppConstants.swift  RealMailApp.swift
realmail/Models/: Account.swift  Attachment.swift  EmailAddress.swift  Folder.swift  Message.swift
realmail/Utilities/: KeychainManager.swift  Logger.swift
realmail/Utilities/Extensions/: DataExtensions.swift  DateExtensions.swift  StringExtensions.swift
realmail/ViewModels/: MailboxViewModel.swift
realmail/Views/: ContentView.swift  SettingsView.swift
realmail/Views/Compose/: ComposeView.swift
realmail/Views/MessageDetail/: MessageDetailView.swift
realmail/Views/MessageList/: MessageListView.swift
realmail/Views/Sidebar/: SidebarView.swift
realmail/core/: __init__.py  cache.py  config.py  database.py  exceptions.py  logging.py  mime.py
realmail/core/models/: __init__.py  account.py  attachment.py  base.py  folder.py  message.py
realmail/core/repositories/: __init__.py  base.py
realmail/services/: __init__.py
realmail/services/IMAP/: IMAPClient.swift  (+1 more)
tests/RealMailTests/: TestUtilities.swift
(+50 files in other folders)
