[project]
name = "realmail"
version = "0.1.0"
description = "A modern email client built with Python microservices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Validation & Settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "aiosqlite>=0.19.0",

    # Cache & Queue
    "redis>=5.0.0",

    # Email Protocols
    "aioimaplib>=1.0.1",
    "aiosmtplib>=3.0.0",

    # OAuth2
    "httpx>=0.26.0",
    "authlib>=1.3.0",

    # Security
    "cryptography>=41.0.0",

    # Utilities
    "python-multipart>=0.0.6",
    "email-validator>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
